--- a/ProjetoDAW2-BomTreinoAPP/src/main/webapp/WEB-INF/web.xml
+++ b/ProjetoDAW2-BomTreinoAPP/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
 	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
 	version="3.1">
-	<display-name>IFoto</display-name>
+	<display-name>Bom Treino APP</display-name>
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
 		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
@@ -17,4 +17,39 @@
 		<param-name>primefaces.THEME</param-name>
 		<param-value>redmond</param-value>
 	</context-param>
+	<welcome-file-list>
+		<welcome-file>/pages/private/gerenciadorUsuario.xhtml</welcome-file>
+	</welcome-file-list>
+	<session-config>
+		<session-timeout>1</session-timeout>
+	</session-config>
+	<login-config>
+		<auth-method>FORM</auth-method>
+		<realm-name>ifotoJdbcRealm</realm-name>
+		<form-login-config>
+			<form-login-page>/pages/public/login.xhtml</form-login-page>
+			<form-error-page>/pages/public/login.xhtml?error=true</form-error-page>
+		</form-login-config>
+	</login-config>
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>Área protegida</web-resource-name>
+			<description />
+			<url-pattern>/pages/private/*</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+			<description />
+			<role-name>PROFESSOR</role-name>
+			<role-name>ALUNO</role-name>
+		</auth-constraint>
+		<user-data-constraint>
+			<transport-guarantee>NONE</transport-guarantee>
+		</user-data-constraint>
+	</security-constraint>
+	<security-role>
+		<role-name>PROFESSOR</role-name>
+	</security-role>
+	<security-role>
+		<role-name>ALUNO</role-name>
+	</security-role>
 </web-app>
